--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <script>
   // 🔧 Paste your Supabase creds:
-  const SUPABASE_URL = 'https://YOUR_SUPABASE_URL.supabase.co';
-  const SUPABASE_ANON_KEY = 'YOUR_SUPABASE_ANON_KEY';
+  const SUPABASE_URL = 'https://mrivwpkezttosafqzgxn.supabase.co';
+  const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yaXZ3cGtlenR0b3NhZnF6Z3huIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUyNzU3MTksImV4cCI6MjA3MDg1MTcxOX0.Y_vImLON8KGMiBUvXl_BXpiOEZe7IXLJP49aclGZAGc';
 
   async function loadPosts() {
     const list = document.getElementById('list');
